--- a/_posts/0000-01-02-cbarclay23.md
+++ b/_posts/0000-01-02-cbarclay23.md
@@ -1,6 +1,6 @@
 ---
 layout: slide
-title: "Welcome to our second slide
+title: "Welcome to our second slide!"
 ---
-Your text
-Use the left arrow to go back!"
+This is cbarclay23's slide
+Use the left arrow to go back!
